blog and case studies ordered properly by date, nav font sizes on smaller desktop, footer menu fixed

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -610,6 +610,14 @@ body.page-about-us {
   margin-bottom: 64px;
 }
 
+// Case Study Specific
+.card--case-study {
+  .crumb:not(:first-child) {
+    background: #e8eaf0;
+    color: black;
+  }
+}
+
 // Animations
 @keyframes pulse {
   0%,
